; ModuleID = '/home/carl/AnghaBench/libgit2/tests/ignore/extr_path.c_test_ignore_path__globs_without_star.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/ignore/extr_path.c_test_ignore_path__globs_without_star.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"attr/.gitignore\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"*.foo\0A**.bar\0A\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c".foo\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"xyz.foo\00", align 1
@.str.4 = private unnamed_addr constant [5 x i8] c".bar\00", align 1
@.str.5 = private unnamed_addr constant [6 x i8] c"x.bar\00", align 1
@.str.6 = private unnamed_addr constant [8 x i8] c"xyz.bar\00", align 1
@.str.7 = private unnamed_addr constant [10 x i8] c"test/.foo\00", align 1
@.str.8 = private unnamed_addr constant [11 x i8] c"test/x.foo\00", align 1
@.str.9 = private unnamed_addr constant [13 x i8] c"test/xyz.foo\00", align 1
@.str.10 = private unnamed_addr constant [10 x i8] c"test/.bar\00", align 1
@.str.11 = private unnamed_addr constant [11 x i8] c"test/x.bar\00", align 1
@.str.12 = private unnamed_addr constant [13 x i8] c"test/xyz.bar\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_ignore_path__globs_without_star() #0 {
  %1 = call i32 @cl_git_rewritefile(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  %2 = call i32 @assert_is_ignored(i32 1, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %3 = call i32 @assert_is_ignored(i32 1, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0))
  %4 = call i32 @assert_is_ignored(i32 1, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0))
  %5 = call i32 @assert_is_ignored(i32 1, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0))
  %6 = call i32 @assert_is_ignored(i32 1, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.6, i64 0, i64 0))
  %7 = call i32 @assert_is_ignored(i32 1, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.7, i64 0, i64 0))
  %8 = call i32 @assert_is_ignored(i32 1, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.8, i64 0, i64 0))
  %9 = call i32 @assert_is_ignored(i32 1, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.9, i64 0, i64 0))
  %10 = call i32 @assert_is_ignored(i32 1, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.10, i64 0, i64 0))
  %11 = call i32 @assert_is_ignored(i32 1, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.11, i64 0, i64 0))
  %12 = call i32 @assert_is_ignored(i32 1, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.12, i64 0, i64 0))
  ret void
}

declare dso_local i32 @cl_git_rewritefile(i8*, i8*) #1

declare dso_local i32 @assert_is_ignored(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
